# ssm

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  NOTE.md  README.md  TODO.md  spec.yaml  ssm.h  ssm_alloc.c  ssm_alloc.h  ssm_code.c  ssm_code.h  ssm_config.h  ssm_main.c  ssm_mem.c  ssm_mem.h  ssm_val.h  ssm_vm.c  ssm_vm.h
.cargo/: config.toml
docs/: 230421-light-lang-discussion.code  ssml.md
include/: ssm.h  ssm_i.h  ssm_ops.h  ssm_rt.h
old/c/: .gitignore  Makefile
old/c/opcodes/: cgen.rb  example.ssm  spec.json  spec.yaml
old/c/src/: ssm.c  ssm_test.c  ssm_vm_header.c  ssm_vm_jmptbl.c  ssm_vm_verify_loop.c
opcodes/: asm.rb  cgen.rb  data.json  data.rb  data.yaml  dsm.rb  example.ssm  example.ssmS  gen.rb  list.opcode  op.rb  opcodes.cabal  opcodes.yaml  spec.json  spec.rb  spec.yaml  ssm-asm-ex.yaml  ssm-asm-ex.yaml.ssm
opcodes-rs/: Cargo.toml
opcodes-rs/src/: cgen.rs  main.rs  opcode.rs
opcodes/app/: Arg.hs  Magic.hs  Main.hs  Opcode.hs
rust/: LICENSE.txt  README.md
rust/src/: lib.rs
rust/src/gc/: alloc.rs  mod.rs
rust/src/vm/: mod.rs
rust/tests/: pool_test.rs
src/: lib.rs  main.rs  ssm.c  ssm.rs  ssm_gc.c  ssm_stack.c  ssm_test.c  ssm_vm.c  ssm_vm_header.c  ssm_vm_jmptbl.c  ssm_vm_switch.c  ssm_vm_verify_loop.c  ssmasm.rs
src/core/: mod.rs  op.rs  val.rs
src/gc/: alloc.rs  mem.rs  mod.rs  pool.rs  val.rs
src/runtime/: gc.rs  mod.rs
src/vm/: code.rs  mod.rs  vm.rs
tests/: gc_test.rs  pool_test.rs
