[package]
name = "ssm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# -- Binaries --
[[bin]]
name = "ssm"
path = "src/ssm.rs"

[[bin]]
name = "ssmasm"
path = "src/ssmasm.rs"