[package]
name = "ssm"
version = "0.1.0"
edition = "2021"
description = "Simple stack machine: a small functional VM"
license = "MIT"
keywords = ["ssm"]
authors = ["lumiknit <aasr4r4@gmail.com>"]

[dependencies]

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = false

[[bin]]
name = "ssm"
path = "src/main.rs"

[[bin]]
name = "ssm-asm"
path = "src/asm.rs"

[[bin]]
name = "ssm-dsm"
path = "src/dsm.rs"
