cabal-version:      2.4
name:               ssm-opcodes
version:            0.1.0.0

-- The license under which the package is released.
license:            MIT
author:             lumiknit
maintainer:         aasr4r4@gmail.com

-- A copyright notice.
copyright:          copyright(c) 2023 lumiknit
-- category:
-- extra-source-files:

executable opcodes
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0,
                      parsec ^>= 3.1.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
